SSB-0013: add shareSearchFlow (#34)
